--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -21,7 +21,7 @@
 
 body.zoom-overlay-open { overflow: hidden; }
 
-.zoom-overlay { background: #FFF; display: none; height: 100%; width: 100%; left: 0; position: fixed; top: 0; }
+.zoom-overlay { background: #FFF; display: none; height: 100%; width: 100%; left: 0; position: fixed; top: 0; z-index: 99; }
 
 .zoom-overlay__close { color: #005EB8; height: 44px; width: 44px; position: absolute; right: 2rem; top: 2rem; z-index: 5; }
 
